--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
               <span class="difficulty hard">Hard</span>
             </div>
             <div class="challenge-body">
-              <p>Find modified keys indicating persistence mechanisms.</p>
+              <p>No VSCs found! Identify the Start value of the Volume Shadow Copy Service Registry Key and find out what it means.</p>
             </div>
             <div class="challenge-footer">
               <input type="text" placeholder="Enter flag..." class="flag-input" />
