--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
               <span class="difficulty easy">Easy</span>
             </div>
             <div class="challenge-body">
-              <p>Description for FTK Imager Challenge 1.</p>
-              <p><strong>Flag format:</strong> <code>flag{ftk1}</code></p>
+              <p>What is the drive letter of the Windows volume?</p>
             </div>
             <div class="challenge-footer">
               <input type="text" placeholder="Enter flag..." class="flag-input" />
