--- a/index.html
+++ b/index.html
@@ -407,8 +407,8 @@
               <span class="difficulty easy">Easy</span>
             </div>
             <div class="challenge-body">
-              <p>Description for Timeline Explorer Challenge 1.</p>
-              <p><strong>Flag format:</strong> <code>flag{timeline1}</code></p>
+              <p>Use Timeline Explorer to view EvtxEcmd.csv and cross-reference with the Hayabusa timeline. Apply filters to identify the User ID of the user who cleared the logs.</p>
+              
             </div>
             <div class="challenge-footer">
               <input type="text" placeholder="Enter flag..." class="flag-input" />
@@ -423,8 +423,7 @@
               <span class="difficulty easy">Easy</span>
             </div>
             <div class="challenge-body">
-              <p>Description for Timeline Explorer Challenge 2.</p>
-              <p><strong>Flag format:</strong> <code>flag{timeline2}</code></p>
+              <p>A process cleared the logs. Find its process ID.</p>
             </div>
             <div class="challenge-footer">
               <input type="text" placeholder="Enter flag..." class="flag-input" />
