--- a/index.html
+++ b/index.html
@@ -541,8 +541,7 @@
               <span class="difficulty medium">Medium</span>
             </div>
             <div class="challenge-body">
-              <p>Description for THOR Lite Challenge 4.</p>
-              <p><strong>Flag format:</strong> <code>flag{thor4}</code></p>
+              <p>What is the name of the YARA rule which triggered this alert?</p>
             </div>
             <div class="challenge-footer">
               <input type="text" placeholder="Enter flag..." class="flag-input" />
@@ -570,9 +569,9 @@
         </div>
       </section>
 
-      <!-- EZTOOLS SECTION -->
+      <!-- VSCMount SECTION -->
       <section id="eztools" class="challenge-section">
-        <h2>EZTools</h2>
+        <h2>VSCMount</h2>
         <div class="challenges-grid">
           
           <div class="challenge-card" data-challenge="eztools1">
