--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
               <span class="difficulty hard">Hard</span>
             </div>
             <div class="challenge-body">
-              <p>The mpasbase.vdm file contains <strong>compressed</strong> anti-spyware signatures.</p>
+              <p>The vdm file contains <strong>compressed</strong> anti-spyware signatures.</p>
               <p>The mpcache file was created to store the <strong>decompressed</strong> anti-spyware signatures to optimise Defender operations.</p>
               <p>Enter <code>igotit</code> to clear this challenge.</p>
             </div>
