--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
               <p>Use PhotoRec to recover deleted files. What are the 2 filetypes that PhotoRec managed to recover?</p>
               <p>Answer in alphabetical order with an underscore separating each filetype.</p>
               <p>Example: docx_pptx</p>
-              <p><strong>Flag format:</strong> <code>flag{photorec1}</code></p>
+              <p><strong>Note: </strong>You do not have to wait for the PhotoRec recovery to complete. ;)</p>
             </div>
             <div class="challenge-footer">
               <input type="text" placeholder="Enter flag..." class="flag-input" />
