--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
               <p><strong>2. </strong>Run <strong>Enter <strong>http://localhost:8080/</strong> in a web browser</strong></p>
               <p>I'm feeling a bit naughty today.😈 </p>
               <p>Let's look at what <strong>cyberarkadm</strong> doing on the web</p>
-              <p><strong>Note: </strong>Chrome search history is stored in <code><strong>\AppData\Local\Google\Chrome\User Data\Default</strong></code>.</p>
-              <p><strong>Enter <code>hindsight</code> to clear this challenge.</p>
+              <p><strong>Note: </strong>Chrome search history is stored in <code>\AppData\Local\Google\Chrome\User Data\Default</code>.</p>
+              <p>Enter <code>hindsight</code> to clear this challenge.</p>
             </div>
             <div class="challenge-footer">
               <input type="text" placeholder="Enter flag..." class="flag-input" />
