--- a/index.html
+++ b/index.html
@@ -315,11 +315,11 @@
             </div>
             <div class="challenge-body">
               <p><strong>1. </strong>Run <strong>hindsight_gui.exe</strong></p>
-              <p><strong>2. </strong>Run <strong>Enter <strong>http://localhost:8080/</strong> in a web browser</strong></p>
+              <p><strong>2. </strong>Run <strong>http://localhost:8080/</strong> in a web browser</p>
               <p>I'm feeling a bit naughty today.😈 </p>
-              <p>Let's look at what <strong>cyberarkadm</strong> doing on the web</p>
+              <p>Let's look at what <strong>cyberarkadm</strong> has been doing on the web.</p>
+              <p>Enter the first URL entry in the Hindsight output</p>
               <p><strong>Note: </strong>Chrome search history is stored in <code>\AppData\Local\Google\Chrome\User Data\Default</code>.</p>
-              <p>Enter <code>hindsight</code> to clear this challenge.</p>
             </div>
             <div class="challenge-footer">
               <input type="text" placeholder="Enter flag..." class="flag-input" />
