--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </div>
             <div class="challenge-body">
               <p>Execute the following command:</p>
-              <p><strong>.\hayabusa-3.5.0-win-x64.exe csv-timeline –d </strong>directory_containing_event_logs<strong> -o </strong>output_directory</p>
+              <p><code><strong>.\hayabusa-3.5.0-win-x64.exe csv-timeline –d </strong>directory_containing_event_logs<strong> -o </strong>output_directory</code></p>
               <p>To clear this challenge, simply enter the word: <code>hayabusa</code></p>
             </div>
             <div class="challenge-footer">
