--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
             </div>
             <div class="challenge-body">
               <p>Execute the following command:</p>
-              <p><code><strong>.\hayabusa-3.5.0-win-x64.exe csv-timeline –d </strong>directory_containing_event_logs<strong> -o </strong>output_directory</code></p>
+              <p><code><strong>.\hayabusa-3.5.0-win-x64.exe csv-timeline –d </strong>directory_containing_event_logs<strong> -o </strong>path_to_output_file</code></p>
+              <p><strong>Note:</strong>The output file must be in <code>.csv</code></p> 
               <p>To clear this challenge, simply enter the word: <code>hayabusa</code></p>
             </div>
             <div class="challenge-footer">
@@ -449,6 +450,7 @@
             <div class="challenge-body">
               <p>Execute the following command:</p>
               <p><code>thor64-lite.exe <strong>-a Filescan--intense --norescontrol --cross-platform -p</strong> path-to-scan <strong>-e</strong> output-directory</code></p>
+              <p><strong>Note:</strong>The THOR Lite scan takes quite a while to fully execute. To save your time, I have taken the liberty to run it beforehand 😁!</p>
               <p>To clear this challenge, simply enter the word: <code>thor</code></p>
             </div>
             <div class="challenge-footer">
