--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
               <p><strong>Important:</strong> All flags in this CTF are in <strong>lowercase</strong>.</p>
               <p>To complete this introductory challenge, simply enter the word: <code>flag</code></p>
               <p>This will help you understand how the submission system works!</p>
+              <p><strong>Note: </strong>Please complete the challenges in order. 😊</p>
             </div>
             <div class="challenge-footer">
               <input type="text" placeholder="Enter flag..." class="flag-input" />
