--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
               <h3>Welcome to the CTF!</h3>
             </div>
             <div class="challenge-body">
-              <p><strong>Important:</strong> All flags in this CTF are in <strong>lowercase</strong>.</p>
               <p>To complete this introductory challenge, simply enter the word: <code>flag</code></p>
               <p>This will help you understand how the submission system works!</p>
               <p><strong>Note: </strong>Please complete the challenges in order. 😊</p>
@@ -229,8 +228,8 @@
             </div>
             <div class="challenge-body">
               <p>Execute the following command:</p>
-              <p><code><strong>.\hayabusa-3.5.0-win-x64.exe csv-timeline –d </strong>directory_containing_event_logs<strong> -o </strong>path_to_output_file</code></p>
-              <p><strong>Note:</strong>The output file must be in <code>.csv</code></p> 
+              <p><code><strong>.\hayabusa-3.7.0-win-x64.exe csv-timeline –d </strong>"C:\Users\Administrator\Desktop\CTF\KAPE Target Outputs\2025-11-28T091517_kape_target\G\Windows\System32\winevt\logs"
+                <strong> -o </strong>"C:\Users\Administrator\Desktop\CTF\Hayabusa Timeline\timeline.csv"</code></p>
               <p>To clear this challenge, simply enter the word: <code>hayabusa</code></p>
             </div>
             <div class="challenge-footer">
@@ -348,7 +347,7 @@
               <p>I'm feeling a bit naughty today.😈 </p>
               <p>Let's look at what <strong>cyberarkadm</strong> has been doing on the web.</p>
               <p>Enter the first URL entry in the Hindsight output</p>
-              <p><strong>Note: </strong>Chrome search history is stored in <code>\AppData\Local\Google\Chrome\User Data\Default</code>.</p>
+              <p><strong>Note: </strong>Chrome search history is stored in <code>C:\Users\Administrator\Desktop\CTF\KAPE Target Outputs\2025-11-28T091517_kape_target\G\Users\cyberarkadm\AppData\Local\Google\Chrome\User Data\Default</code>.</p>
             </div>
             <div class="challenge-footer">
               <input type="text" placeholder="Enter flag..." class="flag-input" />
@@ -450,7 +449,7 @@
             </div>
             <div class="challenge-body">
               <p>Execute the following command:</p>
-              <p><code>thor64-lite.exe <strong>-a Filescan--intense --norescontrol --cross-platform -p</strong> path-to-scan <strong>-e</strong> output-directory</code></p>
+              <p><code>thor64-lite.exe <strong>-a Filescan--intense --norescontrol --cross-platform -p</strong> G:\ <strong>-e</strong> "C:\Users\Administrator\Desktop\CTF\Thor Lite Outputs"</code></p>
               <p><strong>Note: </strong>The THOR Lite scan takes quite a while to fully execute. To save your time, I have taken the liberty to run it beforehand 😁!</p>
               <p>To clear this challenge, simply enter the word: <code>thor</code></p>
             </div>
@@ -554,7 +553,7 @@
             <div class="challenge-body">
               <p>4 files were being verified during the update.</p>
               <p>The malware type associated with the mpcache file is a form of <strong>spyware</strong>.</p>
-              <p>One of the verified files contain anti-spyware signatures.</p>
+              <p>Access the following link and identify which file contains anti-spyware signatures: https://retooling.io/blog/an-unexpected-journey-into-microsoft-defenders-signature-world</p>
               <p>Submit the complete filename of this file.</p>
             </div>
             <div class="challenge-footer">
@@ -633,7 +632,7 @@
             </div>
             <div class="challenge-body">
               <p>Execute the following command</p>
-              <p><code>VSCMount.exe <strong>--dl</strong> drive-to-scan <strong>--mp</strong> output-directory</code></p>
+              <p><code>VSCMount.exe <strong>--dl</strong> G:\ <strong>--mp</strong> "C:\Users\Administrator\Desktop\CTF\VSCMount Outputs"</code></p>
               <p>To clear this challenge, simply enter the word: <code>vscmount</code></p>
             </div>
             <div class="challenge-footer">
