--- a/index.html
+++ b/index.html
@@ -138,10 +138,11 @@
           
           <div class="challenge-card" data-challenge="kape1">
             <div class="challenge-header">
-              <h3>3. Artifact Collection</h3>
+              <h3>3. KAPE Target Outputs</h3>
             </div>
             <div class="challenge-body">
-              <p>What is the name of the <strong>Target option</strong> used for artifact collection?</p> 
+              <p>View the <code>Users</code> folder in the <code>KAPE Target Outputs</code> folder.</p>
+              <p>How many user accounts are there? (excluding Default and Public)</p>
             </div>
             <div class="challenge-footer">
               <input type="text" placeholder="Enter flag..." class="flag-input" />
@@ -152,11 +153,13 @@
 
           <div class="challenge-card" data-challenge="kape2">
             <div class="challenge-header">
-              <h3>4. Artifact Processing</h3>
+              <h3>4. KAPE Module Outputs</h3>
               
             </div>
             <div class="challenge-body">
-              <p>What is the name of the <strong>Module option</strong> used for artifact processing?</p>
+              <p>View the <code>EventLogs</code> folder in the <code>KAPE Module Outputs</code> folder.</p>
+              <p>What is the name of the file in the <code>EventLogs</code> folder?</p>
+              <p><strong>Note:</strong> Do not include the file extention in the answer.</p>
             </div>
             <div class="challenge-footer">
               <input type="text" placeholder="Enter flag..." class="flag-input" />
