--- a/index.html
+++ b/index.html
@@ -924,6 +924,6 @@
   </div>
 
   <script src="challenges.js"></script>
-  <script src="script.js"></script>
+  <script src="challenges.js?v=3"></script>
 </body>
 </html>
