--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
 
   </div>
 
-  <script src="challenges.js"></script>
   <script src="challenges.js?v=3"></script>
+  <script src="script.js?v=3"></script>
 </body>
 </html>
