--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             </div>
             <div class="challenge-body">
               <p>Logs have been cleared! View the Hayabusa timeline in Timeline Explorer to identify how many logs were cleared in total.</p>
-              <p><strong>Hint: </strong>Refer to <strong>Section 4.2</strong> of Lab Instructions</p> 
+              <p><strong>Hint: </strong>Refer to <strong>Section 4.1 & 4.2</strong> of Lab Instructions</p> 
               <p><strong>Path to Hayabusa Timeline:</strong> <code>C:\Users\Administrator\Desktop\Lab\Hayabusa Timeline\timeline.csv</code></p>
             </div>
             <div class="challenge-footer">
