--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <div class="challenge-body">
               <p>Refer to <strong>Section 1.1</strong> of the Lab Instructions and Mount <code>labvhd</code>.</p>
               <p>How many volumes have been mounted?</p>
+              <p><strong>Path to labvhd: </strong><code>C:\Users\Administrator\Desktop\Lab</code></p>
             </div>
             <div class="challenge-footer">
               <input type="text" placeholder="Enter flag..." class="flag-input" />
@@ -620,7 +621,7 @@
               
             </div>
             <div class="challenge-body">
-              <p>Use VSCMount to mount Volume Shadow Copies! <strong>(Refer to Section 8.1 of Lab Instructions)</strong></p>
+              <p>Use VSCMount to mount Volume Shadow Copies! <strong>(Refer to Section 8 of Lab Instructions)</strong></p>
               <p>How many Volume Shadow Copies were mounted?</p>
             </div>
             <div class="challenge-footer">
@@ -708,7 +709,7 @@
               
             </div>
             <div class="challenge-body">
-              <p>Load the SYSTEM registry hive <strong>(Refer to Section 9.1 of Lab Instructions)</strong> and identify the Start value of the Volume Shadow Copy Service registry key.</p>
+              <p>Load the SYSTEM registry hive <strong>(Refer to Section 9 of Lab Instructions)</strong> and identify the Start value of the Volume Shadow Copy Service registry key.</p>
               <p><strong>Note: </strong>After loading the SYSTEM registry hive in Registry Explorer, expand <code>ROOT</code>, navigate to and click <code>\SYSTEM\ControlSet001\Services\VSS</code></p>
               <p>This Start value represents a setting.</p>
               <p>What setting does this Start value represent? Refer to the table below!</p>
@@ -832,7 +833,7 @@
               <p>Use PhotoRec to recover deleted files <strong>(Refer to Section 10 of Lab Instructions)</strong>. What are the 2 filetypes that PhotoRec managed to recover?</p>
               <p>Answer in alphabetical order with an underscore separating each filetype.</p>
               <p><strong>Example:</strong> docx_pptx</p>
-              <p><strong>Note: </strong>You do not have to wait for the PhotoRec recovery to complete. ;)</p>
+              <p><strong>Note: </strong>You do not have to wait for the PhotoRec recovery to complete. PhotoRec will only recover 2 filetypes!</p>
             </div>
             <div class="challenge-footer">
               <input type="text" placeholder="Enter flag..." class="flag-input" />
