--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="challenge-body">
               <p>Refer to <strong>Section 1.1</strong> of the Lab Instructions and Mount <code>labvhd</code>.</p>
               <p>How many volumes have been mounted?</p>
-              <p><strong>Path to labvhd: </strong><code>C:\Users\Administrator\Desktop\Lab</code></p>
+              <p><strong>Path to labvhd: </strong><code>C:\Users\Administrator\Desktop\Lab\labvhd</code></p>
             </div>
             <div class="challenge-footer">
               <input type="text" placeholder="Enter flag..." class="flag-input" />
